renamed 'cucumber' to 'capybara'

--- a/templates/html_report.html.haml
+++ b/templates/html_report.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title cucumber-blanket coverage report
+    %title capybara-blanket coverage report
     :css
       pre {
         margin:0;
